force-app/main/default/objects/Test__b/Test__b.object-meta.xml
<CustomObject>
    <label>Test</label>
    <pluralLabel>Tests</pluralLabel>
</CustomObject>