force-app/main/default/objects/Test__b/fields/Change_Event__c.field-meta.xml
<CustomField>
    <fullName>Change_Event__c</fullName>
    <label>Change Event</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>