force-app/main/default/objects/Test__b/fields/Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_Time__c</fullName>
    <label>Date Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>